--- a/FoodieApplication/frontend/FoodieApplication/src/app/addToCart/add-to-cart/add-to-cart.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/addToCart/add-to-cart/add-to-cart.component.html
@@ -11,7 +11,7 @@
   </div> -->
 <!-- </div>
   </mat-list-option>
-</mat-selection-list> --> -->
+</mat-selection-list> --> 
 
 
 <!-- <section>
@@ -20,7 +20,7 @@
       <div class="row mt-5">
         <div class="col-lg-9">
           <div class="row shop-listing"> -->
-            <table class="table" style="color:dodgerblue;">
+            <table class="table" style="color:whitesmoke;">
               <tr>
                 <th class="b-0">Dish Image</th>
                 <th class="b-0">Restaurant Name</th>
