--- a/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-dish/show-dish.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-dish/show-dish.component.html
@@ -1,5 +1,4 @@
 <mat-card app-player matRipple class="card" *ngFor="let dish of data;index as indexOfelement">
-  <div style="cursor: pointer;" (click)="addTocart(dish)">
   <mat-card-header>
     <mat-card-title>{{ dish.dishName }}</mat-card-title>
     <mat-card-subtitle>{{ dish.dishType }}</mat-card-subtitle>
@@ -9,8 +8,10 @@
   <img  [src]="image.image">
   </div>
 </mat-card-content>
-  </div>
 <button mat-mini-fab *ngIf="isadmin">
   <mat-icon style="float: right;" (click)="add(dish)" >favorite</mat-icon>
 </button>
+ <button mat-mini-fab style="margin-left: 1rem;">
+    <mat-icon style="float: right;" (click)="addTocart(dish)">add_box</mat-icon>
+  </button>
 </mat-card>
