--- a/FoodieApplication/frontend/FoodieApplication/src/app/favService/get-fav-dish/get-fav-dish.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/favService/get-fav-dish/get-fav-dish.component.html
@@ -11,6 +11,9 @@
 <button mat-mini-fab >
   <mat-icon style="float: right; color:red" (click)="remove(dish)" >favorite</mat-icon>
 </button>
+<button mat-mini-fab style="margin-left: 1rem;">
+    <mat-icon style="float: right;" (click)="addTocart(dish)">add_box</mat-icon>
+  </button>
 </mat-card>
 
     <!-- <div class="container">
